<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
     >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/medidatewoman"
            android:contentDescription="medidatingWoman" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"


            android:fontFamily="sans-serif-black"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/google_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bound_bg"
            android:elevation="0dp"
            android:text="@string/google_signIn_bt_text"
            android:textColor="#000000"
            android:visibility="visible"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/guest_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bound_bg"
            android:elevation="0dp"
            android:text="@string/guest_bt_text"
            android:textAlignment="center"
            android:textColor="#000000" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />
        <TextView
            android:paddingHorizontal="30dp"
            android:id="@+id/terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/terms"

            />

    </LinearLayout>



</ScrollView>