<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".HomeScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="155dp"
        android:layout_gravity="center"
        android:layout_height="155dp"
        app:cardCornerRadius="250dp"
        app:cardBackgroundColor="#fff">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">

            <ImageView
                android:src="@drawable/guest_pic"
                android:id="@+id/iv_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/profilePictureDesc" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Intro_text"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iv_name"
        android:textSize="20sp"
        android:inputType="text"
        android:maxLines="1"

        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <Button
        android:id="@+id/bt_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bound_bg"
        android:elevation="0dp"
        android:text="@string/continue_bt_text"
        android:textAlignment="center"
        android:textColor="#000000" />


</LinearLayout>